--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -71,7 +71,7 @@ jobs:
           platforms: linux/amd64,linux/arm64
           #platforms: linux/amd64,linux/arm/v7
           push: ${{ github.event_name != 'pull_request' }}
-          tags: 15.4
+          tags: ghcr.io/shusaan/cloudnative-pg-ts:15.4
                        #${{ steps.docker-id.outputs.tags }}
           labels: ${{ steps.docker-id.outputs.labels }}
 
