--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -68,8 +68,8 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: .
-          platforms: linux/amd64,linux/arm64
-          #platforms: linux/amd64,linux/arm/v7
+          platforms: linux/amd64
+          #platforms: linux/amd64,linux/arm/v7,linux/arm64
           push: ${{ github.event_name != 'pull_request' }}
           tags: ghcr.io/shusaan/cloudnative-pg-ts:16.2-2.14.0
                        #${{ steps.docker-id.outputs.tags }}
