--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -72,7 +72,7 @@ jobs:
           #,linux/arm64
           #platforms: linux/amd64,linux/arm/v7,linux/arm64
           push: ${{ github.event_name != 'pull_request' }}
-          tags: ghcr.io/shusaan/cloudnative-pg-ts:16.2-2.14.2-2
+          tags: ghcr.io/shusaan/cloudnative-pg-ts:16.3-2.15.0
                        #${{ steps.docker-id.outputs.tags }}
           labels: ${{ steps.docker-id.outputs.labels }}
 
